# demo_actix_sql

./: .gitignore  Cargo.toml  requirements.txt
migrations/: 20221115213843_office.sql  20221115213844_users.sql
src/: main.rs
src/models/: error.rs  file_action.rs  file_tb.rs  mod.rs  office.rs  report.rs  user.rs
src/utils/: api_utils.rs  email_utils.rs  mod.rs  seed_utils.rs
