[package]
name = "demo_actix_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
sqlx = { version = "0.7.4", features = ["sqlite","mysql","runtime-async-std-native-tls",  "chrono", "uuid", "any", "macros", "migrate"] }
lettre = "0.11"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
